--- a/styles_publications.css
+++ b/styles_publications.css
@@ -357,7 +357,7 @@ body {
   overflow: hidden;
 }
 
-.video-background iframe {
+.video-background .background-video {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -366,6 +366,20 @@ body {
   height: 56.25vw;
   min-height: 100%;
   min-width: 177.77vh;
+  object-fit: cover;
+  pointer-events: none;
+}
+
+.video-background .fallback-image {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 56.25vw;
+  min-height: 100%;
+  min-width: 177.77vh;
+  object-fit: cover;
   pointer-events: none;
 }
 
