--- a/styles_awards.css
+++ b/styles_awards.css
@@ -225,20 +225,15 @@ body {
   padding: 20px;
 }
 
-.page-header h1 {
-  font-size: 2.24rem;
+.header-content h1 {
+  font-size: 2.8rem;
   margin-bottom: 1rem;
   letter-spacing: 3px;
-}
-
-.header-subtitle {
-  font-size: 0.88rem;
-  opacity: 0.85;
-  padding-bottom: 15px;
   position: relative;
+  padding-bottom: 15px;
 }
 
-.header-subtitle::after {
+.header-content h1::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -247,6 +242,10 @@ body {
   width: 80px;
   height: 3px;
   background-color: #50d890;
+}
+
+.header-subtitle {
+  display: none;
 }
 
 /* CSS For Awards Section */
