--- a/styles_experience.css
+++ b/styles_experience.css
@@ -180,16 +180,11 @@ body {
   font-size: 2.8rem;
   margin-bottom: 1rem;
   letter-spacing: 3px;
-}
-
-.header-subtitle {
-  font-size: 1.1rem;
-  opacity: 0.85;
-  padding-bottom: 15px;
   position: relative;
+  padding-bottom: 15px;
 }
 
-.header-subtitle::after {
+.page-header h1::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -198,6 +193,10 @@ body {
   width: 80px;
   height: 3px;
   background-color: #50d890;
+}
+
+.header-subtitle {
+  display: none;
 }
 
 /* Timeline Container */
