--- a/styles_publications.css
+++ b/styles_publications.css
@@ -330,21 +330,7 @@ body {
 }
 
 .header-subtitle {
-  font-size: 1.1rem;
-  opacity: 0.85;
-  padding-bottom: 15px;
-  position: relative;
-}
-
-.header-subtitle::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 80px;
-  height: 3px;
-  background-color: #50d890;
+  display: none;
 }
 
 .video-background {
@@ -398,6 +384,25 @@ body {
   z-index: 2;
   text-align: center;
   padding: 20px;
+}
+
+.header-content h1 {
+  font-size: 2.8rem;
+  margin-bottom: 1rem;
+  letter-spacing: 3px;
+  position: relative;
+  padding-bottom: 15px;
+}
+
+.header-content h1::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80px;
+  height: 3px;
+  background-color: #50d890;
 }
 
 /* Publication Types Legend */
