--- a/styles_projects.css
+++ b/styles_projects.css
@@ -489,10 +489,10 @@ body {
 }
 
 .project-description {
-  color: #cccccc;
-  font-size: 0.68rem;
+  color: #fff;
+  margin-bottom: 15px;
+  font-size: 0.71rem;
   line-height: 1.6;
-  margin-bottom: 1.5rem;
   font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.5px;
 }
@@ -797,11 +797,11 @@ body {
 
 /* Additional styling for the additional details section */
 .additional-details {
-  background-color: rgba(17, 17, 17, 0.5);
-  border-radius: 8px;
-  padding: 15px;
-  margin-top: 1rem;
-  border-left: 2px solid rgba(80, 216, 144, 0.6);
+  color: #fff !important;
+  font-size: 0.71rem !important;
+  line-height: 1.6;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.5px;
 }
 
 /* See more button styling */
